# School

./: .gitignore  README.md
binary_search/: Makefile  binary_search  binary_search.c
file_copy/: Makefile  file_copy.c
openssl_task/: Makefile  openssl_task.c
quicksort/: Makefile  quicksort.c
rle_encode/: Makefile  rle_encode.c
sieveOfErastosthenes/: Makefile  sieveOfErastosthenes.c
sql/: 032.sql
sqrt/: Makefile  sqrt.c
tcpEchoServer/: Makefile  tcpEchoServer.c
zephyr_crypto_processor/crypto_processor/: CMakeLists.txt  Makefile  prj.conf
zephyr_crypto_processor/crypto_processor/src/: main.c
